<resources>
    <string name="app_name">Indian Food</string>
    <string name="largetitleDescription">Indian eating habits are diverse and influenced by cultural and geographical factors</string>
    <string name="sectionOne">Butter Chicken this is a classic North Indian dish, which is made with marinated chicken cooked in a creamy tomato-based sauce. </string>
    <string name="sectionTow">Biryani is a popular rice dish made with spices, meat or vegetables, and saffron. It is a specialty of the Hyderabad region in South India.</string>
    <string name="sectionThree">Indian food is known for its use of a variety of spices, Some of the commonly used spices include cumin, coriander and turmeric</string>
    <string name="sectionFour">India has a diverse range of regional cuisines, each with its unique flavors and dishes. The eating habits vary accordingly.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="choose_your_meal">Choose Your Meal</string>
    <string name="masala_karela">Masala Karela</string>
    <string name="_50_min">50 Min</string>
    <string name="breakfast">Breakfast</string>
    <string name="Lunch">Lunch</string>
    <string name="Dinner">Dinner</string>
    <string name="Choose_your_meal">Choose Your Meal</string>
    <string name="onBoarding_title_1">welcome to our Indian recipe</string>
    <string name="onBoarding_desc_1">Welcome to our Indian recipe app. Let\'s explore the\n vibrant world of Indian cuisine together</string>
    <string name="onBoarding_title_2">Customize your Dish</string>
    <string name="onBoarding_desc_2">Cook with confidence using our step-by-step\n instructions and helpful tips for perfect results\n every time</string>
    <string name="onBoarding_title_3"><![CDATA[Fast & Quick]]></string>
    <string name="onBoarding_desc_3">From classic curries to modern\n dishes, we\'ve got you covered with our extensive\n collection of Indian recipes.</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="onboarding_slide_image_one">OnBoarding Slide Image One</string>
    <string name="onboarding_slide_image_two">OnBoarding Slide Image Two</string>
    <string name="onboarding_slide_image_three">OnBoarding Slide Image Three</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_button">back button</string>
    <string name="masala_karela_recipe">Masala Karela Recipe</string>
    <string name="india">India</string>
    <string name="_25_min">25 min</string>
    <string name="_10_ingredients">10 ingredients</string>
    <string name="easy">Easy</string>
    <string name="instructions_example">
        To begin making the Masala Karela Recipe
        \n 1- de-seed the karela and slice.Do not remove the skin as the skin has all the nutrients.\n
        2- Add the karela to the pressure cooker with 3 tablespoon of water; \n 3- salt and turmeric powder and pressure cook for three whistles.\n
     To begin making the Masala Karela Recipe
        \n 1- de-seed the karela and slice.Do not remove the skin as the skin has all the nutrients.\n
        2- Add the karela to the pressure cooker with 3 tablespoon of water; \n 3- salt and turmeric powder and pressure cook for three whistles.\n
         To begin making the Masala Karela Recipe
        \n 1- de-seed the karela and slice.Do not remove the skin as the skin has all the nutrients.\n
        2- Add the karela to the pressure cooker with 3 tablespoon of water; \n 3- salt and turmeric powder and pressure cook for three whistles.\n
         To begin making the Masala Karela Recipe
        \n 1- de-seed the karela and slice.Do not remove the skin as the skin has all the nutrients.\n
        2- Add the karela to the pressure cooker with 3 tablespoon of water; \n 3- salt and turmeric powder and pressure cook for three whistles.\n
         To begin making the Masala Karela Recipe
        \n 1- de-seed the karela and slice.Do not remove the skin as the skin has all the nutrients.\n
        2- Add the karela to the pressure cooker with 3 tablespoon of water; \n 3- salt and turmeric powder and pressure cook for three whistles.\n
         To begin making the Masala Karela Recipe
        \n 1- de-seed the karela and slice.Do not remove the skin as the skin has all the nutrients.\n
        2- Add the karela to the pressure cooker with 3 tablespoon of water; \n 3- salt and turmeric powder and pressure cook for three whistles.\n
         To begin making the Masala Karela Recipe
        \n 1- de-seed the karela and slice.Do not remove the skin as the skin has all the nutrients.\n
        2- Add the karela to the pressure cooker with 3 tablespoon of water; \n 3- salt and turmeric powder and pressure cook for three whistles.\n
         To begin making the Masala Karela Recipe
        \n 1- de-seed the karela and slice.Do not remove the skin as the skin has all the nutrients.\n
        2- Add the karela to the pressure cooker with 3 tablespoon of water; \n 3- salt and turmeric powder and pressure cook for three whistles.\n
         To begin making the Masala Karela Recipe
        \n 1- de-seed the karela and slice.Do not remove the skin as the skin has all the nutrients.\n
        2- Add the karela to the pressure cooker with 3 tablespoon of water; \n 3- salt and turmeric powder and pressure cook for three whistles.\n
         To begin making the Masala Karela Recipe
        \n 1- de-seed the karela and slice.Do not remove the skin as the skin has all the nutrients.\n
        2- Add the karela to the pressure cooker with 3 tablespoon of water; \n 3- salt and turmeric powder and pressure cook for three whistles.\n
         To begin making the Masala Karela Recipe
        \n 1- de-seed the karela and slice.Do not remove the skin as the skin has all the nutrients.\n
        2- Add the karela to the pressure cooker with 3 tablespoon of water; \n 3- salt and turmeric powder and pressure cook for three whistles.\n

    </string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">instructions</string>
    <string name="not_implemented_yet">Not implemented yet</string>
    <string name="min">min</string>
    <string name="the_famous_indian_dishes">Indian eating habits</string>
    <string name="the_recipe_doesnt_exist">The recipe doesn\'t exist</string>
    <string name="blank" />
    <string name="breakfast_card">Breakfast Card</string>
    <string name="lunch_card">Lunch Card</string>
    <string name="dinner_card">Dinner Card</string>
    <string name="back_buton">Back Button</string>
    <string name="home">Home</string>
    <string name="search">search</string>
    <string name="categories">categories</string>
    <string name="about">about</string>
    <string name="ingredients_label">%1$s Ingredients</string>
    <string name="minutes_label">%1$s Min</string>
    <string name="instant_time">Instantly</string>
    <string name="total_time_label">%1$s min</string>
    <string name="descriptionNoDataFound">Please try again with different keywords or use our filters to refine your search.</string>
    <string name="no_matching_recipes">No matching recipes</string>
    <string name="descriptionDataNotFound">Please try again with different keywords or use our filters to refine your search.</string>
    <string name="hint">Search</string>
    <string name="text_view_section_pepper">Chilli Peppers used in Indian which is easy to distinguish, long, deep red colour and wrinkled texture.</string>
    <string name="text_view_section_cinnamon">Cinnamon this spice is popular in chutneys and with meat or rice dishes.</string>
    <string name="text_view_section_curry">Curry is an Indian gravy or sauce that is used in tandem with meat, tofu, or vegetables.</string>
    <string name="text_view_section_turmeric">Turmeric the golden spice whose history in Indian cuisine is as timeless as its value in Ayurvedic medicine.</string>
    <string name="text_view_section_saffron">Saffron is a spice derived from the flower of Crocus sativus, commonly known as the saffron crocus.</string>
    <string name="text_view_indian_food_ingredients">Indian food ingredients</string>
    <string name="recipe_image">recipe_image</string>
    <string name="quick_recipes_category_title">Quick recipes</string>
    <string name="healthy_recipes_category_title">Healthy recipes</string>
    <string name="show_more">Show more</string>
    <string name="quick_recipes">Quick Recipes</string>
</resources>