<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search_icon"
        android:title="@string/search"

        />

    <item
        android:id="@+id/action_categories"
        android:icon="@drawable/categories_icon"
        android:title="@string/categories"
        />
    <item
        android:id="@+id/action_ingredients"
        android:icon="@drawable/ic_ingredients"
        android:title="@string/ingredients"
        />

    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_about"
        android:title="@string/about"
        />

</menu>