<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/image_slider"
        style="@style/OnboardingScreenImageStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_onboarding_image"
        android:contentDescription="@string/onboarding_slide_image_one"
        android:src="@drawable/onboarding_slide_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/head"
        style="@style/OnboardingTitleTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/onBoarding_title_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_slider" />


    <TextView
        android:id="@+id/desc"
        style="@style/OnboardingDescTextStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/onboarding_desc_height"
        android:text="@string/onBoarding_desc_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/head" />


</androidx.constraintlayout.widget.ConstraintLayout>