<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_view_ingredient_title"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/smallMargin"
        android:gravity="start"
        android:text="@string/text_view_indian_food_ingredients" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/smallMargin"
        android:orientation="horizontal">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="@dimen/size_image_about_ingredient"
            android:layout_height="@dimen/size_image_about_ingredient"
            android:layout_marginEnd="@dimen/smallMargin"
            android:src="@drawable/pepper" />

        <TextView
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="start"
            android:text="@string/text_view_section_pepper" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/smallMargin"
        android:orientation="horizontal">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="@dimen/size_image_about_ingredient"
            android:layout_height="@dimen/size_image_about_ingredient"
            android:layout_marginEnd="@dimen/smallMargin"
            android:src="@drawable/cinommon" />

        <TextView
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="start"
            android:text="@string/text_view_section_cinnamon" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/smallMargin"
        android:orientation="horizontal">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="@dimen/size_image_about_ingredient"
            android:layout_height="@dimen/size_image_about_ingredient"
            android:layout_marginEnd="@dimen/smallMargin"
            android:src="@drawable/curry" />

        <TextView
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="start"
            android:text="@string/text_view_section_curry" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/normalSpace"
        android:orientation="horizontal">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="@dimen/size_image_about_ingredient"
            android:layout_height="@dimen/size_image_about_ingredient"
            android:layout_marginEnd="@dimen/smallMargin"
            android:src="@drawable/turmeric" />

        <TextView
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="start"
            android:text="@string/text_view_section_turmeric" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/smallMargin"
        android:orientation="horizontal">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="@dimen/size_image_about_ingredient"
            android:layout_height="@dimen/size_image_about_ingredient"
            android:layout_marginEnd="@dimen/smallMargin"
            android:src="@drawable/saffron" />

        <TextView
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="start"
            android:text="@string/text_view_section_saffron" />

    </LinearLayout>

</LinearLayout>

