<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/image_slider_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <ImageView
        android:id="@+id/image_slider"
        style="@style/OnboardingScreenImageStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/onboarding_slide_image_one"
        android:src="@drawable/chef"
        app:layout_constraintBottom_toTopOf="@+id/image_slider_guideline"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/head_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <TextView
        android:id="@+id/head"
        style="@style/OnboardingTitleTextStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/onBoarding_title_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/head_guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/desc_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.86" />

    <TextView
        android:id="@+id/desc"
        style="@style/OnboardingDescTextStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/onBoarding_desc_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc_guideline" />


</androidx.constraintlayout.widget.ConstraintLayout>