<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.RecipeDetailsFragment"
    android:scrollbars="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_30_percent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            app:layout_constraintGuide_begin="300dp" />

        <ImageView
            android:id="@+id/image_view_recipe"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/recipe"
            app:layout_constraintBottom_toTopOf="@id/guideline_30_percent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
           />

        <ImageButton
            android:id="@+id/image_button_return_back"
            android:layout_width="@dimen/back_button_size"
            android:layout_height="@dimen/back_button_size"
            android:layout_margin="@dimen/margin_medium"
            android:background="@drawable/back_button_background"
            android:contentDescription="@string/back_button"
            android:padding="@dimen/padding_small"
            android:src="@drawable/left_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_recipe_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/overlay_margin_large"
            android:background="@drawable/recipe_title_tv_background"
            android:paddingStart="@dimen/padding_medium"
            android:paddingTop="@dimen/padding_large"
            android:text="@string/masala_karela_recipe"
            android:textSize="@dimen/text_title"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/title_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline_30_percent" />

        <TextView
            android:id="@+id/text_view_native_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium_plus"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/india"
            android:textColor="@color/sub_title_color"
            android:fontFamily="@font/roboto_regular"
            android:textSize="@dimen/font_sub_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_recipe_name" />


        <ImageButton
            android:id="@+id/image_button_time_required"
            android:layout_width="@dimen/back_button_size"
            android:layout_height="@dimen/back_button_size"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@drawable/ellipse"
            android:padding="8dp"
            android:src="@drawable/ic_clock"
            app:layout_constraintEnd_toStartOf="@+id/image_button_ingredients"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_native_country"
             />


        <ImageButton
            android:id="@+id/image_button_ingredients"
            android:layout_width="@dimen/back_button_size"
            android:layout_height="@dimen/back_button_size"
            android:layout_marginHorizontal="@dimen/margin_huge"
            android:background="@drawable/ellipse"
            android:padding="8dp"
            android:src="@drawable/ic_eggs"
            app:layout_constraintBottom_toBottomOf="@+id/image_button_time_required"
            app:layout_constraintEnd_toStartOf="@+id/image_button_ease_of_prepare"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/image_button_time_required"
            app:layout_constraintTop_toTopOf="@+id/image_button_time_required"
           />

        <ImageButton
            android:id="@+id/image_button_ease_of_prepare"
            android:layout_width="@dimen/back_button_size"
            android:layout_height="@dimen/back_button_size"
            android:background="@drawable/ellipse"
            android:padding="8dp"
            android:src="@drawable/ic_award"
            app:layout_constraintBottom_toBottomOf="@+id/image_button_time_required"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/image_button_ingredients"
            app:layout_constraintTop_toTopOf="@+id/image_button_time_required"
            />


        <TextView
            android:id="@+id/text_view_ease_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_less_medium"
            android:text="@string/easy"
            android:fontFamily="@font/roboto_regular"
            android:textSize="@dimen/small_text"
            android:textColor="@color/small_text_color"
            app:layout_constraintEnd_toEndOf="@+id/image_button_ease_of_prepare"
            app:layout_constraintStart_toStartOf="@+id/image_button_ease_of_prepare"
            app:layout_constraintTop_toBottomOf="@+id/image_button_ease_of_prepare" />

        <TextView
            android:id="@+id/text_view_number_of_ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_less_medium"
            android:text="@string/_10_ingredients"
            android:fontFamily="@font/roboto_regular"
            android:textSize="@dimen/small_text"
            android:textColor="@color/small_text_color"
            app:layout_constraintEnd_toEndOf="@+id/image_button_ingredients"
            app:layout_constraintStart_toStartOf="@+id/image_button_ingredients"
            app:layout_constraintTop_toBottomOf="@+id/image_button_ingredients" />

        <TextView
            android:id="@+id/text_view_time_required"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_less_medium"
            android:text="@string/_25_min"
            android:fontFamily="@font/roboto_regular"
            android:textSize="@dimen/small_text"
            android:textColor="@color/small_text_color"
            app:layout_constraintEnd_toEndOf="@+id/image_button_time_required"
            app:layout_constraintStart_toStartOf="@+id/image_button_time_required"
            app:layout_constraintTop_toBottomOf="@+id/image_button_time_required" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout_ingredients_instructions"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_number_of_ingredients"
            android:background="@drawable/tab_layout_background"
            android:layout_marginHorizontal="32dp"
            app:tabBackground="@drawable/tab_item_background"
            app:tabIndicator="@android:color/transparent"
            app:tabMode="fixed"
            app:tabTextColor="@color/tab_selected_item_color"
            app:tabSelectedTextColor="@color/white"
            app:tabRippleColor="@color/white"
            >

            <com.google.android.material.tabs.TabItem
                android:layout_width="0dp"
                android:layout_height="34dp"
                android:text="@string/ingredients"
                android:background="@drawable/tab_item_background"
                />

            <com.google.android.material.tabs.TabItem
                android:layout_width="0dp"
                android:layout_height="34dp"
                android:text="@string/instructions"
                android:background="@drawable/tab_item_background"
                />

        </com.google.android.material.tabs.TabLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_container_instructions_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_medium"
            android:layout_marginTop="24dp"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tab_layout_ingredients_instructions"
            tools:layout="@layout/fragment_ingredients" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>